fixed map and added button. working on css spacing

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -15,3 +15,25 @@
 .map-container {
   position: relative;
 }
+ .card-event-design {
+ position: relative;
+ border: 2px groove rgba(28,110,164,0.18);
+  margin: 15px;
+  padding: 23px 115px;
+  bottom: 5px;
+  top: 250px;
+   }
+
+.apply-button {
+  position: absolute;
+  background-color: #DBAD6A;
+  border: none;
+  color: white;
+  vertical-align: center;
+  padding: 15px 32px;
+  font-size: 16px;
+  border-radius: 15px;
+  bottom: 0px;
+  margin-bottom: 1px;
+  left: 45%;
+}
